--- a/fuel/index.html
+++ b/fuel/index.html
@@ -534,6 +534,7 @@
       const activeDays = dailyValues.filter(dayTotal => dayTotal > 0);
       const total = dailyValues.reduce((a, b) => a + b, 0);
       const avg = activeDays.length > 0 ? total / activeDays.length : 0;
+      const days = activeDays.length;
       
       // Log for debugging
       console.log('Daily totals:', dailyTotals);
@@ -692,7 +693,7 @@
         dailyTotals[a] < dailyTotals[b] ? a : b, "-");
 
       const insights = [
-        `📊 Total fuel volume sold: <strong>${total.toLocaleString()} L</strong> over ${activeDays.length} active days`,
+        `📊 Total fuel volume sold: <strong>${total.toLocaleString()} L</strong> over ${days} active days`,
         `🏆 Best performing attendant: <strong>${topAtt}</strong> with ${attendantTotals[topAtt]?.toLocaleString() || 0} L`,
         `⛽ Most productive pump: <strong>${topPump.replace('PUMP3', 'Pump 3').replace('PUMP ', 'Pump ')}</strong>`,
         `📈 Overall average volume: <strong>${Math.round(avg).toLocaleString()} L</strong>`,
