--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="card-container">
     <div class="card">
       <a href="./fuel/">⛽ Fuel Per Pump Analysis</a>
-      <p>Track performance per pump and fuel type.</p>
+      <p>Track performance per pump.</p>
     </div>
     <div class="card">
       <a href="./staff/">👥 Staff Shortages Dashboard</a>
