--- a/staff/index.html
+++ b/staff/index.html
@@ -14,7 +14,7 @@
     td.negative { color: red; }
     td.positive { color: green; }
     .controls { text-align: center; margin-bottom: 20px; }
-    select { padding: 6px 10px; font-size: 14px; }
+    select, input[type="date"], button { padding: 6px 10px; font-size: 14px; margin: 4px; }
     footer { margin-top: 30px; font-size: 13px; color: #777; line-height: 1.5; text-align: center; }
   </style>
 </head>
@@ -23,9 +23,19 @@
   <p>Negative numbers = shortages after selling fuel</p>
 
   <div class="controls">
-    <label for="staffSelect"><strong>View Individual Staff:</strong></label>
+    <label><strong>View Individual Staff:</strong></label>
     <select id="staffSelect">
       <option value="ALL">All Staff</option>
+    </select>
+    <label><strong>From:</strong></label>
+    <input type="date" id="startDate">
+    <label><strong>To:</strong></label>
+    <input type="date" id="endDate">
+    <button onclick="applyFilters()">Apply Filters</button>
+    <label><strong>Chart Type:</strong></label>
+    <select id="chartType">
+      <option value="line">Line</option>
+      <option value="bar">Bar</option>
     </select>
   </div>
 
@@ -34,7 +44,7 @@
   </div>
 
   <h2>Total Shortages (KES)</h2>
-  <div id="averages"></div>
+  <div id="totals"></div>
 
   <h2>Detailed Data</h2>
   <table id="dataTable"></table>
@@ -63,15 +73,11 @@
       });
     }
 
-    // Format DAY like "2025.09.1" → "2025-09-01"
     function formatDay(dayString) {
       if (!dayString || dayString === "TOTALS") return null;
       const parts = dayString.split(".");
       if (parts.length < 3) return dayString;
-      const year = parts[0];
-      const month = parts[1].padStart(2, "0");
-      const day = parts[2].padStart(2, "0");
-      return `${year}-${month}-${day}`;
+      return `${parts[0]}-${parts[1].padStart(2,"0")}-${parts[2].padStart(2,"0")}`;
     }
 
     async function loadData() {
@@ -99,46 +105,63 @@
         opt.textContent = s;
         select.appendChild(opt);
       });
-      select.addEventListener("change", e => renderChart(e.target.value));
+      select.addEventListener("change", () => applyFilters());
+      document.getElementById("chartType").addEventListener("change", () => applyFilters());
     }
 
-    function renderChart(selectedStaff = "ALL") {
+    function applyFilters() {
+      const selectedStaff = document.getElementById("staffSelect").value;
+      const startDate = document.getElementById("startDate").value;
+      const endDate = document.getElementById("endDate").value;
+
+      let filteredData = allData;
+      if (startDate) filteredData = filteredData.filter(d => d.day >= startDate);
+      if (endDate) filteredData = filteredData.filter(d => d.day <= endDate);
+
+      renderChart(selectedStaff, filteredData);
+    }
+
+    function renderChart(selectedStaff = "ALL", data = allData) {
       if (chart) chart.destroy();
 
       let datasets;
       if (selectedStaff === "ALL") {
         datasets = staff.map((s, i) => ({
           label: s,
-          data: allData.map(d => d[s] ?? 0),
+          data: data.map(d => d[s] ?? 0),
           borderColor: `hsl(${i*40},70%,50%)`,
+          backgroundColor: `hsl(${i*40},70%,60%)`,
           fill: false
         }));
       } else {
         datasets = [{
           label: selectedStaff,
-          data: allData.map(d => d[selectedStaff] ?? 0),
+          data: data.map(d => d[selectedStaff] ?? 0),
           borderColor: "#0077cc",
+          backgroundColor: "#66aaff",
           fill: false
         }];
       }
 
+      const chartType = document.getElementById("chartType").value;
+
       chart = new Chart(document.getElementById("shortagesChart"), {
-        type: "line",
-        data: { labels: allData.map(d => d.day), datasets },
+        type: chartType,
+        data: { labels: data.map(d => d.day), datasets },
         options: { responsive: true, plugins: { legend: { position: "bottom" } } }
       });
 
-      renderTable(selectedStaff);
-      renderTotals();
+      renderTable(selectedStaff, data);
+      renderTotals(data);
     }
 
-    function renderTable(selectedStaff = "ALL") {
+    function renderTable(selectedStaff = "ALL", data = allData) {
       const table = document.getElementById("dataTable");
       let header, rows;
 
       if (selectedStaff === "ALL") {
         header = "<tr><th>Day</th>" + staff.map(s => `<th>${s}</th>`).join("") + "</tr>";
-        rows = allData.map(row => {
+        rows = data.map(row => {
           let cells = staff.map(s => {
             let v = row[s];
             let cls = v < 0 ? "negative" : "positive";
@@ -148,7 +171,7 @@
         }).join("");
       } else {
         header = `<tr><th>Day</th><th>${selectedStaff}</th></tr>`;
-        rows = allData.map(row => {
+        rows = data.map(row => {
           let v = row[selectedStaff];
           let cls = v < 0 ? "negative" : "positive";
           return `<tr><td>${row.day}</td><td class='${cls}'>${v.toFixed(2)}</td></tr>`;
@@ -158,15 +181,14 @@
       table.innerHTML = header + rows;
     }
 
-    // ✅ NEW: Show total shortage (KES) per staff
     function renderTotals(data = allData) {
-      const container = document.getElementById("averages");
-      let html = "<table><tr><th>Staff</th><th>Total Shortage (KES)</th></tr>";
+      const container = document.getElementById("totals");
+      let html = "<table><tr><th>Staff</th><th>Total Shortage/Excess (KES)</th></tr>";
 
       staff.forEach(s => {
         const values = data.map(d => d[s]).filter(v => !isNaN(v));
         const total = values.length ? values.reduce((a, b) => a + b, 0) : 0;
-        const cls = total > 70 ? "negative" : "positive"; 
+        const cls = total < 0 ? "negative" : "positive"; 
         html += `<tr><td>${s}</td><td class='${cls}'>${total.toFixed(2)}</td></tr>`;
       });
 
@@ -178,6 +200,7 @@
   </script>
 </body>
 </html>
+
 
 
    
