--- a/staff/index.html
+++ b/staff/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>Staff Shortages Dashboard — Mangu Shell</h1>
+  <h1>Staff Shortages Dashboard — Mangu Shell Service Station</h1>
   <p>Negative numbers = shortages after selling fuel</p>
 
   <div class="controls">
