--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       <a href="./staff/">👥 Staff Shortages Dashboard</a>
       <p>Monitor shortages/excesses after fuel sales.</p>
     </div>
+    <div class="card">
+      <a href="./product/">📦 Product Analysis Dashboard</a>
+      <p>Analyze product performance.</p>
+    </div>
   </div>
 
   <footer>
